{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 222,
  "lineage": "ea6571e0-0198-a003-fb25-0075a03abd34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "stopnshop-prod-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:loadbalancer/app/stopnshop-prod-alb/a616c4369b2852b1",
            "arn_suffix": "app/stopnshop-prod-alb/a616c4369b2852b1",
            "dns_name": "stopnshop-prod-alb-664911277.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:loadbalancer/app/stopnshop-prod-alb/a616c4369b2852b1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "stopnshop-prod-alb",
            "security_groups": [
              "sg-0af3e3f4944e02f9e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0358144cbefbf1425"
              },
              {
                "subnet_id": "subnet-0728883cec6ad96a6"
              }
            ],
            "subnets": [
              "subnet-0358144cbefbf1425",
              "subnet-0728883cec6ad96a6"
            ],
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-alb",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.stopnshop-alb-sg",
            "aws_subnet.stopnshop-prod-alb-1a",
            "aws_subnet.stopnshop-prod-alb-1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:listener/app/stopnshop-prod-alb/a616c4369b2852b1/1719d18206a509ab",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:listener/app/stopnshop-prod-alb/a616c4369b2852b1/1719d18206a509ab",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:loadbalancer/app/stopnshop-prod-alb/a616c4369b2852b1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.stopnshop-prod-alb",
            "aws_lb_target_group.stopnshop-prod-alb-tgrp",
            "aws_security_group.stopnshop-alb-sg",
            "aws_subnet.stopnshop-prod-alb-1a",
            "aws_subnet.stopnshop-prod-alb-1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "stopnshop-prod-vpc-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:network-acl/acl-0bb619a12451c81b6",
            "default_network_acl_id": "acl-0bb619a12451c81b6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bb619a12451c81b6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 61000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "081333574648",
            "subnet_ids": [],
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-vpc-nacl",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "stopnshop-prod-mrtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-085d58c436bc26249",
            "id": "rtb-085d58c436bc26249",
            "owner_id": "081333574648",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0add10cab2d0dbe19",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-mrtb",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.stopnshop-prod-igw",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "stopnshop-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01581ffba3821cdf3",
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:instance/i-05bfd77bfc65c6ce2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bfd77bfc65c6ce2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demoinstance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f1c745fbf2af864f",
            "private_dns": "ip-10-0-3-165.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07f15af362ae7e67c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c8706f455086d0fd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074640903c6915462",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-webserver0",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8706f455086d0fd"
            ]
          },
          "dependencies": [
            "aws_security_group.stopnshop-webserver-sg",
            "aws_subnet.stopnshop-prod-websubnet-1a",
            "aws_subnet.stopnshop-prod-websubnet-1b"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01581ffba3821cdf3",
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:instance/i-00bd36b16d10e16e7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00bd36b16d10e16e7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demoinstance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-027b4d9a5cc94bd2a",
            "private_dns": "ip-10-0-4-194.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00fc5ab0f0b0e6e17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c8706f455086d0fd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c15e9edc0b4c72b8",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-webserver1",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8706f455086d0fd"
            ]
          },
          "dependencies": [
            "aws_security_group.stopnshop-webserver-sg",
            "aws_subnet.stopnshop-prod-websubnet-1a",
            "aws_subnet.stopnshop-prod-websubnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stopnshop-prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:internet-gateway/igw-0add10cab2d0dbe19",
            "id": "igw-0add10cab2d0dbe19",
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-igw",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "stopnshop-prod-alb-tgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775",
            "arn_suffix": "targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "stopnshop-prod-alb-tgrp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-alb-tgrp",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "target_type": "instance",
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "stopnshop-alb-tgrp-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775-20210330040319765900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775",
            "target_id": "i-05bfd77bfc65c6ce2"
          },
          "dependencies": [
            "aws_instance.stopnshop-webserver",
            "aws_lb_target_group.stopnshop-prod-alb-tgrp",
            "aws_security_group.stopnshop-webserver-sg",
            "aws_subnet.stopnshop-prod-websubnet-1a",
            "aws_subnet.stopnshop-prod-websubnet-1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775-20210330040319757000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:081333574648:targetgroup/stopnshop-prod-alb-tgrp/83a0dfc02d875775",
            "target_id": "i-00bd36b16d10e16e7"
          },
          "dependencies": [
            "aws_instance.stopnshop-webserver",
            "aws_lb_target_group.stopnshop-prod-alb-tgrp",
            "aws_security_group.stopnshop-webserver-sg",
            "aws_subnet.stopnshop-prod-websubnet-1a",
            "aws_subnet.stopnshop-prod-websubnet-1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stopnshop-prod-crtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03b9429a956af0c4e",
            "owner_id": "081333574648",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-crtb",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociate_a1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbaf21692e03b473",
            "route_table_id": "rtb-03b9429a956af0c4e",
            "subnet_id": "subnet-08cd09d5df5fe7436"
          },
          "dependencies": [
            "aws_route_table.stopnshop-prod-crtb",
            "aws_subnet.stopnshop-prod-appsubnet1a",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociate_a1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032f0439e6a5e31f3",
            "route_table_id": "rtb-03b9429a956af0c4e",
            "subnet_id": "subnet-0fc4a48e2f366c764"
          },
          "dependencies": [
            "aws_route_table.stopnshop-prod-crtb",
            "aws_subnet.stopnshop-prod-appsubnet1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociate_alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfcd82b3d087c1df",
            "route_table_id": "rtb-085d58c436bc26249",
            "subnet_id": "subnet-0358144cbefbf1425"
          },
          "dependencies": [
            "aws_default_route_table.stopnshop-prod-mrtb",
            "aws_internet_gateway.stopnshop-prod-igw",
            "aws_subnet.stopnshop-prod-alb-1a",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociate_alb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1460a9ef43c029b",
            "route_table_id": "rtb-085d58c436bc26249",
            "subnet_id": "subnet-0728883cec6ad96a6"
          },
          "dependencies": [
            "aws_default_route_table.stopnshop-prod-mrtb",
            "aws_internet_gateway.stopnshop-prod-igw",
            "aws_subnet.stopnshop-prod-alb-1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociate_w1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e080792501e3da9",
            "route_table_id": "rtb-03b9429a956af0c4e",
            "subnet_id": "subnet-074640903c6915462"
          },
          "dependencies": [
            "aws_route_table.stopnshop-prod-crtb",
            "aws_subnet.stopnshop-prod-websubnet-1a",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociate_w1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037ca06689efbf8bf",
            "route_table_id": "rtb-03b9429a956af0c4e",
            "subnet_id": "subnet-0c15e9edc0b4c72b8"
          },
          "dependencies": [
            "aws_route_table.stopnshop-prod-crtb",
            "aws_subnet.stopnshop-prod-websubnet-1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociated1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088a4819860acbd6b",
            "route_table_id": "rtb-03b9429a956af0c4e",
            "subnet_id": "subnet-0e372e78c15788406"
          },
          "dependencies": [
            "aws_route_table.stopnshop-prod-crtb",
            "aws_subnet.stopnshop-prod-dbsubnet1a",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassociated1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ee11ca3e5188c33",
            "route_table_id": "rtb-03b9429a956af0c4e",
            "subnet_id": "subnet-0ffc19a997b3383f0"
          },
          "dependencies": [
            "aws_route_table.stopnshop-prod-crtb",
            "aws_subnet.stopnshop-prod-dbsubnet1b",
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stopnshop-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:security-group/sg-0af3e3f4944e02f9e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic to public network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af3e3f4944e02f9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stopnshop-alb-sg",
            "name_prefix": "",
            "owner_id": "081333574648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-alb-sg",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stopnshop-appserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:security-group/sg-0ecbc6bda30b88132",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic to public network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecbc6bda30b88132",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "stopnshop-apperver-sg",
            "name_prefix": "",
            "owner_id": "081333574648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-appserver-sg",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stopnshop-bastionservre-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:security-group/sg-08690fdb239eb5d54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic to public network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08690fdb239eb5d54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stopnshop-bastionservre-sg",
            "name_prefix": "",
            "owner_id": "081333574648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-bastionservre-sg",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stopnshop-dbserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:security-group/sg-008d78bcb17c28ecc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic to public network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008d78bcb17c28ecc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "stopnshop-dbserver-sg",
            "name_prefix": "",
            "owner_id": "081333574648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-dbserver-sg",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stopnshop-webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:security-group/sg-0c8706f455086d0fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic to public network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8706f455086d0fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS Traffic from public network",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stopnshop-webserver-sg",
            "name_prefix": "",
            "owner_id": "081333574648",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-webserver-sg",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-alb-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-0358144cbefbf1425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0358144cbefbf1425",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-alb-1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-alb-1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-alb-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-0728883cec6ad96a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0728883cec6ad96a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-alb-1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-alb-1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-appsubnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-08cd09d5df5fe7436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-08cd09d5df5fe7436",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-appsubnet1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-appsubnet1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-appsubnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-0fc4a48e2f366c764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0fc4a48e2f366c764",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-appsubnet1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-appsubnet1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-dbsubnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-0e372e78c15788406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0e372e78c15788406",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-dbsubnet1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-dbsubnet1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-dbsubnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-0ffc19a997b3383f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0ffc19a997b3383f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-dbsubnet1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-dbsubnet1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-websubnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-074640903c6915462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-074640903c6915462",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-websubnet-1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-websubnet-1a",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stopnshop-prod-websubnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:subnet/subnet-0c15e9edc0b4c72b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c15e9edc0b4c72b8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-websubnet-1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-websubnet-1b",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "vpc_id": "vpc-053bad8fef92e6a85"
          },
          "dependencies": [
            "aws_vpc.stopnshop-prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stopnshop-prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:081333574648:vpc/vpc-053bad8fef92e6a85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb619a12451c81b6",
            "default_route_table_id": "rtb-085d58c436bc26249",
            "default_security_group_id": "sg-01b1a37be48845ce1",
            "dhcp_options_id": "dopt-eb051f8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-053bad8fef92e6a85",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085d58c436bc26249",
            "owner_id": "081333574648",
            "tags": {
              "Environment": "production",
              "Name": "stopnshop-prod-vpc",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "stopnshop-prod-vpc",
              "Owner": "kthadikaran@gmail.com",
              "Project": "stopnshop"
            }
          }
        }
      ]
    }
  ]
}